# poc-ai-workflow-frameworks

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  METRICS.md  README.md  RESULTS_SUMMARY.md  prd.json  progress.txt  pyproject.toml
.claude/skills/add-framework/: SKILL.md
.claude/skills/add-scenario/: SKILL.md
.claude/skills/analyze-results/: SKILL.md
.claude/skills/run-benchmark/: SKILL.md
frameworks/: AGENTS.md
frameworks/crewai/: AGENTS.md  pyproject.toml
frameworks/crewai/src/impl_crewai/: __init__.py  agentic_sql_qa.py  multi_agent_coordination.py  multihop_qa.py  rag_qa.py
frameworks/langgraph/: AGENTS.md  pyproject.toml
frameworks/langgraph/src/impl_langgraph/: __init__.py  agentic_sql_qa.py  multi_agent_coordination.py  multihop_qa.py  rag_qa.py
frameworks/pydantic_ai/: AGENTS.md  pyproject.toml
frameworks/pydantic_ai/src/impl_pydantic_ai/: __init__.py  agentic_sql_qa.py  multi_agent_coordination.py  multihop_qa.py  rag_qa.py
frameworks/smolagents/: AGENTS.md  pyproject.toml
frameworks/smolagents/src/impl_smolagents/: __init__.py  agentic_sql_qa.py  multi_agent_coordination.py  multihop_qa.py  rag_qa.py
results/: comparison_agentic_sql_qa_baseline.md  comparison_agentic_sql_qa_capability.md  comparison_multi_agent_coordination_baseline.md  comparison_multi_agent_coordination_capability.md  comparison_multihop_qa.md  comparison_multihop_qa_baseline.md  comparison_multihop_qa_capability.md  comparison_rag_qa.md  comparison_rag_qa_baseline.md
scenarios/: AGENTS.md
scenarios/agentic_sql_qa/: AGENTS.md  questions.yaml  spec.yaml
scenarios/agentic_sql_qa/data/: seed.sql
scenarios/agentic_sql_qa/documents/: escalation_matrix.md  support_policies.md  tooling_contract.md
scenarios/multi_agent_coordination/: AGENTS.md  questions.yaml  spec.yaml
scenarios/multi_agent_coordination/data/: seed.sql
scenarios/multi_agent_coordination/documents/: change_management_policy.md  incident_response_runbook.md  security_compliance_policy.md  service_catalog.md
scenarios/multihop_qa/: AGENTS.md  questions.yaml  spec.yaml
scenarios/multihop_qa/documents/: datacenter_locations.md  incident_log.md  server_registry.md  sla_policies.md  team_directory.md
scenarios/rag_qa/: AGENTS.md  questions.yaml  spec.yaml
scenarios/rag_qa/documents/: git_branching.md  http_status_codes.md  python_concurrency.md
scripts/: compare.py  run_eval.py
shared-lib/: AGENTS.md  pyproject.toml
shared-lib/src/shared/: __init__.py  agentic_sql.py  interface.py  multi_agent_coordination.py  retrieval.py  retrieval_strategy.py  scenario.py
shared-lib/src/shared/eval/: __init__.py  code_quality.py  code_review.py  harness.py  llm_judge.py  metrics.py  profiles.py  retrieval.py
shared/src/shared/: __init__.py  interface.py
shared/src/shared/eval/: __init__.py  llm_judge.py  metrics.py
