[project]
name = "shared"
version = "0.1.0"
description = "Core interfaces and evaluation harness for framework benchmarking"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "radon>=5.1",
    "chromadb>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
