[project]
name = "impl-crewai"
version = "0.1.0"
description = "CrewAI implementation of the RAG benchmark"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.108",
    "chromadb>=0.5",
    "openai>=1.0",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/impl_crewai"]
