[project]
name = "impl-langgraph"
version = "0.1.0"
description = "LangGraph implementation of the RAG benchmark"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "chromadb>=0.5",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/impl_langgraph"]
