[project]
name = "impl-pydantic-ai"
version = "0.1.0"
description = "Pydantic AI implementation of the RAG benchmark"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=1.0",
    "chromadb>=0.5",
    "openai>=1.0",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/impl_pydantic_ai"]
