[project]
name = "impl-smolagents"
version = "0.1.0"
description = "smolagents implementation of the RAG benchmark"
requires-python = ">=3.12"
dependencies = [
    "smolagents[litellm]>=1.0",
    "chromadb>=0.5",
    "openai>=1.0",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/impl_smolagents"]
